# EY

./: README.md  package-lock.json  package.json
loan-ai-app/: .gitignore
loan-ai-app/backend/: .dockerignore  .env.example  .env.tmp  .gitignore  Dockerfile  docker-compose.yml  env.example  pyproject.toml  python_paths.txt  render.yaml  requirements.txt  test_integration.py
loan-ai-app/backend/app/: __init__.py  config.py  main.py  models.py
loan-ai-app/backend/app/agents/: __init__.py  master_agent.py  sales_agent.py  sanction_agent.py  underwriting_agent.py  verification_agent.py
loan-ai-app/backend/app/database/: adapter.py  connection.py  init_db.py  models.py
loan-ai-app/backend/app/routers/: auth.py
loan-ai-app/backend/app/services/: auth_service.py  claude_service.py  mock_data.py  ocr_service.py
loan-ai-app/backend/app/utils/: helpers.py  logger.py
loan-ai-app/frontend/: .eslintrc.cjs  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js
loan-ai-app/frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
loan-ai-app/frontend/.next/cache/: .tsbuildinfo
loan-ai-app/frontend/.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
loan-ai-app/frontend/src/: App.jsx  index.css
loan-ai-app/nextjs-frontend/: package-lock.json  package.json  tailwind.config.mjs
(+189 files in other folders)
