[project]
name = "loan-ai-backend"
version = "0.1.0"
description = "Backend for AI Loan App"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "anthropic==0.7.8",
  "python-dotenv==1.0.0",
  "pydantic==2.6.0",
  "pydantic-settings==2.2.0",
  "python-multipart==0.0.6",
  "reportlab==4.0.7",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "slowapi==0.1.9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
